0.98    FIXED - static datasource plugin honours KILO
        FIXED - WriteConfig (i.e. editor) won't 'lose' absolute keyword from USESCALE
        FIXED - memory leak in poller code. Memory usage is MUCH lower now.
        FIXED - NINK colours were exchanged (thanks Deathwing00!)
        FIXED - check-gdbug.php shouldn't complain about empty ob_flush buffers anymore
        CHANGE - lots of performance optimisations. Roughly twice as fast as 0.97a.
        CHANGE - no longer shows .-prefixed files in map config picker
        CHANGE - editor ignores attempts to rename nodes to have space in names
        ADDED - New Cacti integration for editor. Additional 'edit maps' permission. No need for editor-config.php anymore!
        ADDED - per-map runtime logging
        ADDED - per-map debugging (debug a single map in Cacti without running debug logging for the whole poller)
	ADDED - Cacti template for monitoring Weathermap performance/mapcount/warningcount/memory.
	ADDED - KEYBGCOLOR and KEYOUTLINECOLOR both accept 'none'
        ADDED - USEICONSCALE works to colour artificial icons
        ADDED - performance options to disable additional information checks in rrd and dstats data plugins.
		
0.97a	FIXED - Incorrect action URL in 'map selector' combo box for Cacti users.
	FIXED - cacti_graph_id set to 0 instead of ID, by rrd/poller_output and dsstats plugins (thanks sh0x)
	FIXED - 'classic' legend drew 'hidden' colour values for things like key background colour. (thanks jmayniac)
	FIXED - PHP 5.3 deprecated code in HTML_Imagemap.class.php
	FIXED - 'Show Only First' option ignored in Cacti (thanks inko_nick)
	FIXED - Editor deals with overlapping nodes on different ZORDERS properly.
	FIXED - "property of non-object in editor.php line 466" while editing map properties (thanks to iNeo)
	FIXED - no-data option on command-line didn't work 
	FIXED - Clone Node was broken in 0.97 
	FIXED - Maps with per-user permissions show up multiple times in map selector